fix homepage - chalet - letter spacing, responsive

--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -48,8 +48,8 @@ body {
 .font-size-2 {
   font-size: 2rem;
 }
-.font-size-6-25 {
-  font-size: 6.25rem;
+.font-size-5 {
+  font-size: 5rem;
 }
 
 /* letter-spacing */
@@ -59,6 +59,10 @@ body {
 }
 .letter-space-02 {
   letter-spacing: 0.2rem;
+}
+
+.letter-space-0 {
+  letter-spacing: 0;
 }
 /* font-style */
 
@@ -155,8 +159,8 @@ body {
   width: 18rem;
 }
 /* hr of background */
-.width-37-5 {
-  width: 37.5rem;
+.width-35 {
+  width: 35rem;
 }
 
 /* background */
@@ -184,7 +188,7 @@ body {
   height: 21.2rem;
 }
 .height-60 {
-  height: 60rem;
+  height: 70rem;
 }
 
 /* borders */
@@ -321,11 +325,11 @@ body {
 
 @media screen and (min-width: 200px) and (max-width: 280px) {
   /* chalet title */
-  .font-size-6-25 {
+  .font-size-5 {
     font-size: 3rem;
   }
   /* hr chalet */
-  .width-37-5 {
+  .width-35 {
     display: none;
   }
   .subtitle-size,
@@ -375,7 +379,7 @@ body {
 
 @media screen and (min-width: 300px) and (max-width: 600px) {
   /* chalet title */
-  .font-size-6-25 {
+  .font-size-5 {
     font-size: 2.5rem;
   }
   .letter-space-2 {
@@ -390,7 +394,7 @@ body {
   .height-60 {
     height: 55rem;
   }
-  .width-37-5 {
+  .width-35 {
     display: none;
   }
   .width-50 {
@@ -408,9 +412,6 @@ body {
     align-items: center;
     padding-bottom: 0.2rem;
   }
-  .media-padding-top {
-    padding-top: 8rem;
-  }
 }
 
 @media screen and (min-width: 280px) and (max-width: 820px) {
@@ -423,11 +424,8 @@ body {
 }
 
 @media screen and (min-width: 500px) and (max-width: 782px) {
-  .font-size-6-25 {
-    font-size: 5.5rem;
-  }
-  .width-37-5 {
-    width: 17rem;
+  .width-35 {
+    width: 32rem;
   }
   .max-width {
     max-width: 28rem;
@@ -435,33 +433,31 @@ body {
   .width-18 {
     width: 19rem;
   }
+
+  .media-padding-top {
+    padding-top: 10rem;
+  }
 }
 
 @media screen and (min-width: 700px) and (max-width: 900px) {
-  .font-size-6-25 {
-    font-size: 6.5rem;
-  }
-  .letter-space-2 {
-    letter-spacing: 2.8rem;
+  .font-size-5 {
+    font-size: 5rem;
   }
   .max-width {
     max-width: 40rem;
   }
   .width-18 {
-    width: 22.5rem;
+    width: 23rem;
   }
   .height-60 {
     height: 70rem;
   }
   .media-padding-top {
-    padding-top: 18rem;
+    padding-top: 10rem;
   }
 }
 
 @media screen and (min-width: 900px) and (max-width: 1200px) {
-  .font-size-6-25 {
-    font-size: 8rem;
-  }
   .width-18 {
     width: 12rem;
   }
@@ -472,12 +468,49 @@ body {
     font-size: 0.9rem;
   }
   .height-60 {
-    height: 85rem;
+    height: 50rem;
   }
   .media-padding-top {
-    padding-top: 18rem;
+    padding-top: 4rem;
+  }
+
+  .font-size-5 {
+    font-size: 4.5rem;
+  }
+
+  .width-35 {
+    width: 30rem;
   }
   .max-width {
     max-width: 48rem;
+  }
+  .background-media {
+    background-size: 100%;
+    background-repeat: no-repeat;
+  }
+}
+
+@media screen and (min-width: 1200px) and (max-width: 1600px) {
+  .background-media {
+    background-size: 100%;
+    background-repeat: no-repeat;
+  }
+
+  .height-60 {
+    height: 65rem;
+  }
+}
+
+@media screen and (min-width: 1500px) {
+  .font-size-5 {
+    font-size: 6rem;
+  }
+  .background-media {
+    background-size: 100%;
+    background-repeat: no-repeat;
+  }
+
+  .height-60 {
+    height: 70rem;
   }
 }
